Browser Support and Additional Controll Features
This Update resolves Issues on current browsers, and in our tests
Chrome,FF, IE, Opera and Safari are now supported.

Additional Update for Controls, you have now the ability to define if
you want to enable doublezoom and rotate, as well as define the factors
for each of them.
Added working example for minimal controls and updated on page
documentation.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -313,7 +313,7 @@ i {
 #cropContaineroutput{ width:100%; height:145px; position: relative; border:1px solid #ccc;}
 #cropContainerEyecandy{ width:100%; height:200px; position: relative; border:1px solid #ccc;}
 #cropContainerPreload{ width:100%; height:200px; position: relative; border:1px solid #ccc;}
-#cropContainerPlaceHolder1{ width:100%; height:200px; position: relative; border:none;}
+#cropContainerMinimal{ width:100%; height:200px; position: relative; border:1px solid #ccc;}
 #cropContainerPlaceHolder2{ width:100%; height:200px; position: relative; border:none;}
 
 
